hphp/hack/test/typecheck/tconst/simplify_error.php.exp
File "simplify_error.php", line 13, characters 31-33:
The method `foo` is not compatible with the overridden method (Typing[4341])
  File "simplify_error.php", line 13, characters 31-33:
  Method `foo` has type `(function(): T)` in `C`
  File "simplify_error.php", line 4, characters 31-33:
  But it has type `(function(): this::T)` in parent `P<this::T>`
  File "simplify_error.php", line 13, characters 31-33:
  Type `(function(): T)` is not a subtype of `(function(): this::T)`
  File "simplify_error.php", line 7, characters 28-34:
  Expected `this::T`
  File "simplify_error.php", line 4, characters 38-38:
    via this generic `T`
  File "simplify_error.php", line 13, characters 38-38:
  But got `T`
